# jetty_access_control

./: .gitignore  LICENSE  README.md
docs/: .firebaserc
rusty_jetty/: .gitignore  Cargo.toml  jetty_config.yaml  sample_tags.yaml
rusty_jetty/access_graph/: Cargo.toml
rusty_jetty/access_graph/src/: lib.rs
rusty_jetty/firestore_serializer/: Cargo.toml
rusty_jetty/firestore_serializer/src/: key_serializer.rs  lib.rs
rusty_jetty/jetty-test/: .gitignore
rusty_jetty/jetty_cli/: Cargo.toml  pyproject.toml
rusty_jetty/jetty_cli/src/: ascii.rs  main.rs  project.rs
rusty_jetty/jetty_cli/src/init/: autocomplete.rs  dbt.rs  fs.rs  mod.rs  pki.rs  snowflake.rs  tableau.rs  validation.rs
rusty_jetty/jetty_cli/src/init/inquiry/: dbt.rs  mod.rs  snowflake.rs  tableau.rs  validation.rs
rusty_jetty/jetty_cli/src/lib/: ascii.rs  cmd.rs  diff.rs  lib.rs  plan.rs  project.rs  remove.rs  rename.rs  telemetry.rs  usage_stats.rs
rusty_jetty/jetty_cli/src/lib/init/: fs.rs  mod.rs  pki.rs
rusty_jetty/jetty_cli/src/lib/new/: mod.rs
rusty_jetty/jetty_cli/src/lib/tui/: screen.rs
rusty_jetty/jetty_cli/src/tui/: mod.rs
rusty_jetty/jetty_cli/templates/schemas/: assets.json  env_enums.json  env_template.txt  groups.json  users.json
rusty_jetty/jetty_cli/templates/settings/: settings.json
rusty_jetty/jetty_core/: Cargo.toml
rusty_jetty/jetty_core/src/: access_graph.rs  connectors.rs  jetty.rs  lib.rs  logging.rs  matrix.rs  project.rs  snowflake.rs  tag_parser.rs  telemetry.rs  watcher.rs  write.rs
rusty_jetty/jetty_core/src/access_graph/: explore.rs  explore2.rs  graph.rs  helpers.rs  test_util.rs  translate.rs
rusty_jetty/jetty_core/src/access_graph/explore/: accessible_assets.rs  asset_paths_for_tag.rs  default_policy_targets.rs  extract_graph.rs  get_node.rs  matching_children.rs  matching_descendants.rs  matching_paths.rs  matching_paths_to_children.rs  matching_paths_to_descendants.rs  tags_for_asset.rs  user_accessible_tags.rs
rusty_jetty/jetty_core/src/access_graph/explore2/: accessable_assets.rs  accessible_assets.rs  asset_paths_for_tag.rs  extract_graph.rs  get_node.rs  matching_children.rs  matching_paths.rs  matching_paths_to_children.rs  tags_for_asset.rs  user_accessible_tags.rs
rusty_jetty/jetty_core/src/connectors/: nodes.rs  processed_nodes.rs
rusty_jetty/jetty_core/src/cual/: mod.rs
rusty_jetty/jetty_core/src/permissions/: matrix.rs  mod.rs
rusty_jetty/jetty_core/src/snowflake/: consts.rs  grant.rs  mod.rs  role.rs  snowflake.rs
rusty_jetty/jetty_core/src/write/: assets.rs  config.rs  diff.rs  groups.rs  new_groups.rs  parser_common.rs  policies.rs  tag_parser.rs  users.rs  utils.rs
rusty_jetty/jetty_core/templates/schemas/: assets.json  config_template.txt  groups.json  tags.json  users.json
rusty_jetty/jetty_core/templates/settings/: settings.json
rusty_jetty/jetty_dbt/: Cargo.toml
rusty_jetty/jetty_dbt/src/: consts.rs  cual.rs  lib.rs  manifest.rs
rusty_jetty/jetty_dbt/src/manifest/: filtered_asset.rs  ingestion.rs  mod.rs  node.rs  to_asset_type.rs
rusty_jetty/jetty_dev/: jetty_config.yaml
rusty_jetty/jetty_explore/: .gitignore  Cargo.toml  build.rs
rusty_jetty/jetty_explore/src/: assets.rs  groups.rs  lib.rs  main.rs  node_summaries.rs  nodes.rs  static_server.rs  tags.rs  users.rs
rusty_jetty/jetty_explore/web/: .gitignore  README.md  index.html  package-lock.json  package.json  quasar.config.js  tsconfig.json
rusty_jetty/jetty_explore/web/src/: App.vue  util.js  util.ts
rusty_jetty/jetty_py/: Cargo.toml  pyproject.toml
rusty_jetty/jetty_py/src/: main.rs
rusty_jetty/jetty_pypi/: Cargo.toml  README.md  pyproject.toml
rusty_jetty/jetty_pypi/src/: main.rs
rusty_jetty/jetty_snowflake/: Cargo.toml
rusty_jetty/jetty_snowflake/src/: consts.rs  coordinator.rs  creds.rs  cual.rs  database.rs  lib.rs  rest.rs  schema.rs  snowflake_query.rs  table.rs  user.rs  view.rs  warehouse.rs  write.rs
rusty_jetty/jetty_snowflake/src/efperm/: map.rs  mod.rs  privilege.rs  role_tree.rs
rusty_jetty/jetty_snowflake/src/entry/: asset.rs  database.rs  entry.rs  grant.rs  mod.rs  role.rs  role_grant.rs  schema.rs  table.rs  user.rs  view.rs
rusty_jetty/jetty_snowflake/src/entry_types/: asset.rs  database.rs  entry.rs  future_grant.rs  grant.rs  grant_of.rs  mod.rs  object.rs  role.rs  role_grant.rs  schema.rs  table.rs  user.rs  view.rs  warehouse.rs
rusty_jetty/jetty_snowflake/src/ep/: consts.rs  mod.rs
rusty_jetty/jetty_snowflake/src/write/: default_policies.rs  groups.rs  policies.rs  users.rs
rusty_jetty/jetty_snowflake/tests/: integration_tests.rs
rusty_jetty/jetty_sql/: .gitignore  Cargo.toml
rusty_jetty/jetty_sql/src/: lib.rs  node.rs
rusty_jetty/jetty_sql/tests/: query_test.rs
rusty_jetty/jetty_sql/tests/queries/: query_21.sql
rusty_jetty/jetty_tableau/: Cargo.toml  jetty_config.yaml
rusty_jetty/jetty_tableau/src/: coordinator.rs  env.rs  fetch.rs  lib.rs  nodes.rs  nodes2.rs  origin.rs  rest.rs
rusty_jetty/jetty_tableau/src/file_parse/: flow.rs  mod.rs  origin.rs  snowflake_common.rs  xml_docs.rs
rusty_jetty/jetty_tableau/src/lineage/: assets.rs  mod.rs  sql.rs
rusty_jetty/jetty_tableau/src/nodes/: asset_to_policy.rs  assets.rs  datasource.rs  flow.rs  group.rs  lens.rs  metric.rs  mod.rs  project.rs  user.rs  view.rs  workbook.rs
rusty_jetty/jetty_tableau/src/nodes2/: data_connection.rs  datasource.rs  flow.rs  group.rs  groups.rs  lens.rs  lense.rs  lenses.rs  metric.rs  project.rs  projects.rs  user.rs  users.rs  view.rs  workbook.rs  workbooks.rs
rusty_jetty/jetty_tableau/src/permissions/: consts.rs  manager.rs  matrix.rs  mod.rs
rusty_jetty/jetty_tableau/src/rest/: cual.rs  mod.rs
rusty_jetty/jetty_tableau/src/write/: default_policies.rs  groups.rs  mod.rs  policies.rs  users.rs
rusty_jetty/jetty_tableau/src/xml_parse/: flow.rs  mod.rs  snowflake.rs
rusty_jetty/jetty_tableau/test_data/: Iris Workbook.twb  flow  flow2  test1.xml  test2.tds
rusty_jetty/jetty_tableau/tests/: integration_tests.rs
rusty_jetty/poetry/: pyproject.toml
rusty_jetty/poetry/tests/: test_poetry.py
(+184 files in other folders)
