[workspace]
members = [
    "jetty_core",
    "jetty_cli",
    "jetty_snowflake",
    "jetty_tableau",
    "jetty_dbt",
    "jetty_sql",
    "jetty_explore",
    "jetty_pypi",
]

default-members = [
    "jetty_core",
    "jetty_cli",
    "jetty_snowflake",
    "jetty_tableau",
    "jetty_dbt",
    "jetty_sql",
    "jetty_explore",
]
