[workspace]
members = [
    "jetty_core",
    "jetty_cli",
    "jetty_snowflake",
    "jetty_tableau",
    "jetty_dbt",
    "jetty_explore",
    "jetty_pypi",
    "firestore_serializer",
]

default-members = [
    "jetty_core",
    "jetty_cli",
    "jetty_snowflake",
    "jetty_tableau",
    "jetty_dbt",
    "jetty_explore",
    "firestore_serializer",
]
