[package]
name = "firestore_serializer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
base64 = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
time = { version = "0.3.17", features = ["formatting", "parsing"] }
