[package]
name = "jetty_cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "jetty_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "jetty_cli"
path = "src/main.rs"

[dependencies]
jetty_core = { path = "../jetty_core" }
jetty_snowflake = { path = "../jetty_snowflake" }
jetty_dbt = { path = "../jetty_dbt" }
jetty_tableau = { path = "../jetty_tableau" }
jetty_explore = { path = "../jetty_explore" }
firestore_serializer = { path = "../firestore_serializer" }
tokio = { version = "1.20.1", features = ["fs", "rt", "macros"] }
anyhow = "^1"
clap = { version = "4.0.18", features = ["derive"] }
colored = "2"
inquire = "0.5.2"
crossterm = "0.25.0"
yaml-peg = { version = "1.0.4", features = ["serde"] }
sha2 = "0.10.6"
base64 = "0.13.1"
dirs = "4.0.0"
lazy_static = "1.4.0"
human-panic = { git = "https://github.com/jettylabs/human-panic", branch = "master" }
serde = { version = "1.0.144", features = ["derive"] }
rsa = "0.7.1"
rand = "0.8.5"
uuid = { version = "1.2.1", features = ["v5", "serde"] }
once_cell = "1.16.0"
time = "0.3.17"
reqwest = "0.11.13"
textwrap = "0.16.0"
indicatif = "0.17.2"
git2 = { version = "0.15.0", features = [
    "zlib-ng-compat",
], default-features = false }


[target.'cfg(linux)'.dependencies]
openssl = { version = "0.10.42", features = ["vendored"] }
