[package]
name = "jetty_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
async-trait = "0.1.57"
dirs = "4.0.0"
serde = { version = "1.0.144", features = ["derive"] }
yaml-peg = { version = "1.0.4", features = ["serde"] }
graphviz-rust = "0.2.1"
petgraph = "0.6.2"
derivative = "2.2.0"
derive-new = "0.5.9"
maplit = "1.0.2"
