[package]
name = "jetty_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
async-trait = "0.1.57"
dirs = "4.0.0"
serde = { version = "1.0.144", features = ["derive"] }
yaml-peg = { version = "1.0.4", features = ["serde"] }
graphviz-rust = "0.2.1"
petgraph = { version = "0.6.2", features = ["serde-1"] }
derivative = "2.2.0"
bincode = "1.3.3"
time = "0.3.15"
log = "0.4.17"
env_logger = "0.9.0"
