[package]
name = "jetty_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
async-trait = "0.1.57"
serde = { version = "1.0.144", features = ["derive"] }
yaml-peg = { version = "1.0.4", features = ["serde"] }
graphviz-rust = "0.3.0"
petgraph = { version = "0.6.2", features = ["serde-1"] }
derivative = "2.2.0"
bincode = "1.3.3"
time = { version = "0.3.15", features = ["serde"] }
indexmap = "1.9.1"
log = "0.4.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = { version = "2.3.1", features = ["serde"] }
urlencoding = "2.1.2"
bimap = { version = "0.6.2", features = ["serde"] }
uuid = { version = "1.2.1", features = ["v5", "v4", "serde"] }
dirs = "4.0.0"
lazy_static = "1.4.0"
colored = "2.0.0"
glob = "0.3.0"
textwrap = "0.16.0"
tinytemplate = "1.2.1"
notify-debouncer-mini = { version = "*", default-features = false }
tokio = { version = "1.24.0", features = ["sync", "time"] }
serde_json = "1.0.94"
