[package]
name = "jetty_dbt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
async-trait = "0.1.57"
jetty_core = { path = "../jetty_core" }
mockall = "0.11.2"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
url = "2.3.1"
urlencoding = "2.1.2"

[dev-dependencies]
tokio = { version = "1.21.1", features = ["macros", "rt"] }
