[package]
name = "jetty_explore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
axum = "0.5.16"
jetty_core = { path = "../jetty_core" }
mime_guess = "2.0.4"
open = "3.0.3"
rust-embed = "6.4.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
time = { version = "0.3.15", features = ["serde"] }
tokio = { version = "1", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "time",
] }
tower-http = { version = "0.3", features = ["trace"] }
uuid = { version = "1.2.1", features = ["v5", "serde"] }
