[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "jetty-core"
description = "Data Access Control for the Modern Data Stack"
readme = "README.md"
keywords = ["data", "privacy", "access control"]
authors = [{ name = "Jk Jensen" }, { name = "Isaac Hales" }]
maintainers = [{ name = "Isaac Hales" }]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
bindings = "bin"
