[package]
name = "jetty_snowflake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jetty_core = { path = "../jetty_core" }
anyhow = "^1"
async-trait = "0.1.57"
jsonwebtoken = "8.1.1"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
yaml-peg = { version = "1.0.4", features = ["serde"] }
graphviz-rust = "0.3.0"
petgraph = "0.6.2"
futures = "0.3.23"
reqwest-retry = "0.1.5"
reqwest-middleware = "0.1.6"
urlencoding = "2.1.2"

[dev-dependencies]
lazy_static = "1.4.0"
tokio = { version = "1.20.1", features = ["macros"] }
wiremock = "0.5"
