[package]
name = "jetty_tableau"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
jetty_core = { path = "../jetty_core" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.57"
