[package]
name = "jetty_tableau"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
jetty_core = { path = "../jetty_core" }
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.57"
futures = "0.3.24"
roxmltree = "0.15.0"
regex = "1.5"
urlencoding = "2.1.2"
bytes = "1.2.1"
zip = "0.6.2"
uuid = { version = "1.1.2", features = ["v4"] }
lazy_static = "1.4.0"
bimap = { version = "0.6.2", features = ["serde"] }
serde_with = { version = "2.1.0", features = ["json"] }
sqlparser = "0.30.0"

[dev-dependencies]
dirs = "4.0.0"
